--- a/portfolio-page/mkdocs.yml
+++ b/portfolio-page/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Portfolio
+site_name: Project Overview
 
 theme:
   name: material
@@ -40,14 +40,16 @@ plugins:
       languages:
         en:
           name: English
+          site_name: Project Overview
         de:
           name: Deutsch
+          site_name: Projektübersicht
       nav_translations:
         de:
           EasyFPU for iOS:
             translation: EasyFPE für iOS
             url: https://ulricusr.github.io/iOS-EasyFPU/de
-          
+
   - search
   - glightbox
 
