--- a/portfolio-page/mkdocs.yml
+++ b/portfolio-page/mkdocs.yml
@@ -12,7 +12,7 @@ repo_url: https://github.com/UlricusR/ulricusr.github.io
 # Configuration
 theme:
   name: material
-  #custom_dir: material/.overrides
+  custom_dir: material/.overrides
   palette:
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
