--- a/portfolio-page/mkdocs.yml
+++ b/portfolio-page/mkdocs.yml
@@ -68,6 +68,7 @@ plugins:
             translation: EasyFPE für iOS
             url: https://ulricusr.github.io/iOS-EasyFPU/de
   - search
+  - glightbox
 
 # Extensions
 markdown_extensions:
