--- a/portfolio-page/mkdocs.yml
+++ b/portfolio-page/mkdocs.yml
@@ -50,6 +50,7 @@ extra:
 nav:
   - index.md
   - EasyFPU for iOS: https://ulricusr.github.io/iOS-EasyFPU
+  - EasyFPU for Android: https://ulricusr.github.io/Android-EasyFPU
   - legal.md
 
 # Plugins
@@ -68,6 +69,9 @@ plugins:
           EasyFPU for iOS:
             translation: EasyFPE für iOS
             url: https://ulricusr.github.io/iOS-EasyFPU/de
+          EasyFPU for Android:
+            translation: EasyFPE für Android
+            url: https://ulricusr.github.io/Android-EasyFPU/de
   - search
   - glightbox
 
