--- a/portfolio-page/mkdocs.yml
+++ b/portfolio-page/mkdocs.yml
@@ -91,11 +91,11 @@ plugins:
         'index.php/de/joomla/churchcal-de.md': 'https://www.rueth.info/joomla-churchcal/de/'
         'index.php/de/joomla/eventlist-de.md': 'https://www.rueth.info/joomla4-eventlist/de/'
         'index.php/en.md': 'https://www.rueth.info'
-        'index.php/en/easyfpu-android-en.md': 'https://www.rueth.info/Android-EasyFPU/en/'
-        'index.php/en/easyfpu-for-ios.md': 'https://www.rueth.info/iOS-EasyFPU/en/'
+        'index.php/en/easyfpu/easyfpu-android-en.md': 'https://www.rueth.info/Android-EasyFPU/en/'
+        'index.php/en/easyfpu/easyfpu-for-ios.md': 'https://www.rueth.info/iOS-EasyFPU/en/'
         'index.php/en/easyfpu/easyfpu-overview.md': 'https://www.rueth.info/en/#easyfpu'
-        'index.php/de/joomla/churchcal-en.md': 'https://www.rueth.info/joomla-churchcal/en/'
-        'index.php/de/joomla/eventlist-en.md': 'https://www.rueth.info/joomla4-eventlist/en/'
+        'index.php/en/joomla/churchcal-en.md': 'https://www.rueth.info/joomla-churchcal/en/'
+        'index.php/en/joomla/eventlist-en.md': 'https://www.rueth.info/joomla4-eventlist/en/'
 
 # Extensions
 markdown_extensions:
